# SecondSight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SecondSight.esp  skyrimse.ppj  vcpkg.json
cmake/: Plugin.h.in
include/: APIManager.h  FreeCameraManager.h  Hooks.h  Offsets.h  PCH.h
include/API/: DTR_API.h  FCFW_API.h
scripts/: _ts_SecondSightEffectScript.pex  _ts_SecondSightFunctions.pex
source/scripts/: _ts_SecondSightEffectScript.psc  _ts_SecondSightFunctions.psc
src/: APIManager.cpp  FreeCameraManager.cpp  Hooks.cpp  plugin.cpp
